tests/baselines/reference/functionOverloads29.errors.txt
tests/cases/compiler/functionOverloads29.ts(4,9): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/functionOverloads29.ts (1 errors) ====
    function foo(bar:string):string;
    function foo(bar:number):number;
    function foo(bar:any):any{ return bar }
    var x = foo();
            ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    